checksum and improvements
