# CONVERTER/src/com/jalasoft/converter/model/video/vconverter.py
@@ -16,10 +16,10 @@ from CONVERTER.src.com.jalasoft.converter.model.converter import Converter
 
 class VideoToImages(Converter):
     """Converts any video format to a set of any format images""" 
-    def __init__(self, input_file, output_file, fps): 
-        super().__init__(input_file, output_file) 
-        self.fps = fps        
-        
+    def __init__(self, input_file, output_file, fps):
+        super().__init__(input_file, output_file)
+        self.fps = fps
+
     def convert(self):
         """Converts video to a set of images"""
         return " ".join(['ffmpeg', '-i', self.input_file, '-r', self.fps, self.output_file])
